Fixed session bug, update hongbao view

--- a/project.config.json
+++ b/project.config.json
@@ -44,7 +44,7 @@
 				{
 					"id": 0,
 					"name": "id=CDBD946A0DB240E402EA",
-					"pathName": "pages/index/index",
+					"pathName": "pages/earnPoint/earnPoint",
 					"query": "id=CDBD946A0DB240E402EA",
 					"scene": 1011
 				}
