--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
   },
   "pages": [
     "pages/index/index",
+    "pages/payScores/payScores",
     "pages/wallet/wallet",
     "pages/exchange/exchange",
     "pages/changeHis/changeHis",
@@ -35,6 +36,10 @@
     "pages/earnPoint/earnPoint",
     "pages/sucChange/sucChange",
     "pages/mine/mine",
+    "pages/showCode/showCode",
+    "pages/setScores/setScores",
+    
+    "pages/chooseCoin/chooseCoin",
     "pages/loginApp/loginApp"
   ],
   "window": {
